# channel2d

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/channels/: 006-01.chn  006-02.chn  006-03.chn  006-04.chn  006-05.chn  006-06.chn  006-07.chn  006-08.chn  006-09.chn  006-10.chn  006-11.chn  006-12.chn  006-13.chn  006-14.chn  006-15.chn  006-16.chn  006-17.chn  006-18.chn  006-19.chn  006-20.chn  006-21.chn  006-22.chn  006-23.chn  006-24.chn  006-25.chn  006-26.chn  006-27.chn  006-28.chn  006-29.chn  006-30.chn  006-31.chn  006-32.chn  006-33.chn  006-34.chn  006-35.chn  006-36.chn  006-37.chn  006-38.chn  006-39.chn  006-40.chn  (+4 more)
data/lineprogs/: .gitignore
doc/: CMakeLists.txt  config.dox
doc/img/: channel-1.eps  channel-2.eps  channel-3.eps  channel-4.eps
doc/src/: mainpage.dox  sections.dox
script/: run.sh
src/app/: CMakeLists.txt
src/app/sources/: main.cpp
